kubernetes/base/identity/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: ops-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.6.4
          args:
            - start
          ports:
            - name: http
              containerPort: 8080
            - name: management
              containerPort: 9000

          startupProbe:
            httpGet:
              path: /health/started
              port: management
            failureThreshold: 30
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /health/ready
              port: management
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health/live
              port: management
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
