kubernetes/base/identity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: ops-platform
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: management
      port: 9000
      targetPort: management
